# bulk-haskell

./: .envrc  .gitignore  BULK.cabal  README.md  bulk.cabal  cabal.project.local  default.nix  justfile  package.yaml  release.nix  shell.nix  stack.yaml
app/: Main.hs
config/: hash0.bulktext
src/Data/: BULK.hs
src/Data/BULK/: API.hs  BARK.hs  Core.hs  Debug.hs  Decode.hs  Encode.hs  Eval.hs  From.hs  Hash.hs  Hex.hs  Internal.hs  Lens.hs  Math.hs  Std.hs  Stdlib.hs  TextNotation.hs  To.hs  ToFrom.hs  Types.hs  Unsafe.hs  Utils.hs
src/Data/BULK/Eval/: Types.hs
src/Polysemy/: Megaparsec.hs
src/Vary/: Extra.hs
test/: 123-bad.bulktext  123-pre.bulktext  123.bulktext  321.bulktext  Arrays.hs  Numbers.hs  References.hs  Spec.hs  Utils.hs  bad nesting.bulk  bootstrap-bad.bulktext  foo.bulk  foo.bulktext  foos.bulk  foos.bulktext  manifest.bulktext  nesting.bulk  package-bad.bulktext  primitives.bulk  primitives.bulktext  sub-test.sh
test/Test/: BULK.hs
test/Test/BULK/: Decode.hs  Encode.hs
test/Test/QuickCheck/Instances/: BULK.hs
test/bulk/: 123-bad.bulktext  123.bulktext  321.bulktext  bad nesting.bulk  bad nesting.bulktext  foo-1.bulktext  foo-list.bulk  manifest-bad.bulktext  manifest.bulk  manifest.bulktext  nesting.bulktext  primitives.bulktext
test/bulk/config/: bark-alpha.bulktext  foo.bulktext  foobar.bulktext
test/config/: bar.bulktext  bark-alpha.bulktext  foo.bulktext  foobar.bulktext
