name:                BULK
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kephas/BULK#readme
license:             BSD3
license-file:        LICENSE
author:              Pierre Thierry
maintainer:          pierre@nothos.net
copyright:           2017 Pierre Thierry
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.BULK
  build-depends:       base >= 4.7 && < 5
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kephas/BULK
